# missive

./: .gitignore  README.md  app.config.ts  app.vue  index.html  nuxt.config.ts  package-lock.json  package.json  tailwind.config.js
assets/: main.css
components/: EmailList.vue  Header.vue  InboxView.vue  Sidebar.vue
docs/: architecture.drawio
pages/: compose.vue  drafts.vue  sent.vue  settings.vue  trash.vue
pages/email/: [id].vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  database.rs  email.rs  lib.rs  main.rs  models.rs
stores/: emailStore.ts
