[package]
name = "Missive"
version = "0.1.0"
description = "A Tauri Email Client with Vue.js frontend and SurrealDB"
authors = ["you"]
edition = "2021"

[lib]
name = "tauri_email_client_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
surrealdb = { version = "1.5", features = ["kv-surrealkv"] }
lettre = { version = "0.11", features = ["tokio1-native-tls", "builder"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "1"
log = "0.4"
env_logger = "0.11"
imap = { version = "3.0.0-alpha.15", features = ["native-tls"] }
native-tls = "0.2"
mailparse = "0.14"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[dev-dependencies]
tempfile = "3"
